fix vertical spacing

--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -16,3 +16,7 @@
     display: flex;
     justify-content: space-between;
 }
+
+main .about h2 {
+    margin-top: 20px;
+}
