--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -110,7 +110,8 @@ h1, h2 {
 }
 
 h1:first-of-type, h2:first-of-type {
-  margin-top: 50px;
+  margin-top: 60px;
+  margin-bottom: 0;
 }
 
 h1 {
